# BlueskyGPTBot

./: .env.example  Cargo.toml  README.md  flake.nix
.github/: CODEOWNERS
lexicons/: Cargo.toml  README.md  build.rs
lexicons/data/com/atproto/identity/: resolveHandle.json
src/: atp.rs  main.rs  system.txt
