[package]
name = "bluesky-gptbot"
description = "Sarcastic GPT reply bot for Bluesky"

license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
anyhow = "1.0.71"
tokio = { version = "1.28.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
time = { version = "0.3.20", features = ["formatting"] }
async-recursion = "1.0.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
openai = "1.0.0-alpha.8"

[dependencies.lexicons]
path = "./lexicons"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = "debuginfo"
lto = "thin"
opt-level = 3

[workspace]
members = [
    "lexicons"
]

[workspace.package]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

